Made the overall page structure a grid, seems to have solved the flex issue and covers the entire page with background.

--- a/styles/style2.css
+++ b/styles/style2.css
@@ -31,6 +31,8 @@ header
   margin: 0;
   padding: 0;
   min-height: 6rem;
+  grid-row: 1;
+  grid-column: 1 / 2;
 }
 
 .monogram
@@ -55,8 +57,8 @@ header
 /* || Main Page Container */
 .page-container
 {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   height: 100vh;
 }
 
@@ -71,6 +73,8 @@ header
 {
   flex: 1;
   margin: 0 0 30rem 3rem;
+  grid-row: 2;
+  grid-column: 1;
 }
 
 /* || Menu */
@@ -81,6 +85,8 @@ header
   display: grid;
   text-align: right;
   width: 100%;
+  grid-row: 2;
+  grid-column: 2;
 }
 
 .menu-container ul
